Add java toolchain version override (#61)