@@ -45,6 +45,19 @@ public abstract class ModernJavaModule implements GTNHModule {
         "--add-opens", "java.desktop/com.sun.imageio.plugins.png=ALL-UNNAMED", "--add-opens",
         "jdk.dynalink/jdk.dynalink.beans=ALL-UNNAMED", "--add-opens",
         "java.sql.rowset/javax.sql.rowset.serial=ALL-UNNAMED", };
+    /** Default Java 25 JVM arguments */
+    public final String[] JAVA_25_ARGS = new String[] { "-Dfile.encoding=UTF-8",
+        "-Djava.system.class.loader=com.gtnewhorizons.retrofuturabootstrap.RfbSystemClassLoader", "--add-opens",
+        "java.base/jdk.internal.loader=ALL-UNNAMED", "--add-opens", "java.base/java.net=ALL-UNNAMED", "--add-opens",
+        "java.base/java.nio=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED", "--add-opens",
+        "java.base/java.lang=ALL-UNNAMED", "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED", "--add-opens",
+        "java.base/java.text=ALL-UNNAMED", "--add-opens", "java.base/java.util=ALL-UNNAMED", "--add-opens",
+        "java.base/jdk.internal.reflect=ALL-UNNAMED", "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens",
+        "jdk.naming.dns/com.sun.jndi.dns=ALL-UNNAMED,java.naming", "--add-opens", "java.desktop/sun.awt=ALL-UNNAMED",
+        "--add-opens", "java.desktop/sun.awt.image=ALL-UNNAMED", "--add-opens",
+        "java.desktop/com.sun.imageio.plugins.png=ALL-UNNAMED", "--add-opens",
+        "jdk.dynalink/jdk.dynalink.beans=ALL-UNNAMED", "--add-opens",
+        "java.sql.rowset/javax.sql.rowset.serial=ALL-UNNAMED", };
     /** Default Java HotSwapAgent JVM arguments */
     public final String[] HOTSWAP_JVM_ARGS = new String[] {
         // DCEVM advanced hot reload
@@ -119,7 +132,7 @@ public abstract class ModernJavaModule implements GTNHModule {
 
         final List<String> java17JvmArgs = new ArrayList<>(Arrays.asList(JAVA_17_ARGS));
         final List<String> hotswapJvmArgs = new ArrayList<>(Arrays.asList(HOTSWAP_JVM_ARGS));
-        ext.set("java17JvmArgs", java17JvmArgs);
+        ext.set("modernJvmArgs", java17JvmArgs);
         ext.set("hotswapJvmArgs", hotswapJvmArgs);
 
         final TaskProvider<SetupHotswapAgentTask> setupHotswapAgent17 = tasks
@@ -170,5 +183,44 @@ public abstract class ModernJavaModule implements GTNHModule {
                 .set(getToolchainService().launcherFor(java21Toolchain));
             t.setWorkingDir(gtnh.configuration.runServerDirectory);
         });
+
+        final int forcedToolchain = gtnh.configuration.forceToolchainVersion;
+        if (forcedToolchain != -1) {
+            final List<String> modernJvmArgs = forcedToolchain >= 25 ? new ArrayList<>(Arrays.asList(JAVA_25_ARGS))
+                : java17JvmArgs;
+            ext.set("modernJvmArgs", modernJvmArgs);
+
+            final Action<JavaToolchainSpec> javaXToolchain = (spec) -> {
+                spec.getLanguageVersion()
+                    .set(JavaLanguageVersion.of(forcedToolchain));
+                spec.getVendor()
+                    .set(JvmVendorSpec.JETBRAINS); // for enhanced HotSwap
+            };
+            ext.set("javaXToolchain", javaXToolchain);
+
+            final TaskProvider<SetupHotswapAgentTask> setupHotswapAgentX = tasks.register(
+                "setupHotswapAgentX",
+                SetupHotswapAgentTask.class,
+                t -> t.setTargetForToolchain(javaXToolchain));
+
+            final TaskProvider<RunHotswappableMinecraftTask> runClientXTask = tasks
+                .register("runClientX", RunHotswappableMinecraftTask.class, Distribution.CLIENT, "runClient");
+            runClientXTask.configure(t -> {
+                t.dependsOn(setupHotswapAgentX);
+                t.setup(project, gtnh);
+                t.getJavaLauncher()
+                    .set(getToolchainService().launcherFor(javaXToolchain));
+                t.setWorkingDir(gtnh.configuration.runClientDirectory);
+            });
+            final TaskProvider<RunHotswappableMinecraftTask> runServerXTask = tasks
+                .register("runServerX", RunHotswappableMinecraftTask.class, Distribution.DEDICATED_SERVER, "runServer");
+            runServerXTask.configure(t -> {
+                t.dependsOn(setupHotswapAgentX);
+                t.setup(project, gtnh);
+                t.getJavaLauncher()
+                    .set(getToolchainService().launcherFor(javaXToolchain));
+                t.setWorkingDir(gtnh.configuration.runServerDirectory);
+            });
+        }
     }
 }
